frontend/css/landing-page.css
body {
  font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
}

html, header, body {
  margin: 0;
  height: 100%;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
  font-weight: 700;
}

header.masthead {
  position: relative;
  background-color: #343a40;
  background-repeat: no-repeat;
  background-position: center;
  background-image: url("../img/bg-mouse.jpg");
  background-size: cover;
  padding-top: 18rem;
  padding-bottom: 18rem;
}

header.masthead-fail {
  position: relative;
  background-color: #343a40;
  background-repeat: no-repeat;
  background-position: center;
  background-image: url("../img/bg-mouse-shocked.jpg");
  background-attachment: fixed;
  background-size: cover;
  padding-top: 18rem;
  padding-bottom: 18rem;
}

header.masthead .overlay, header.masthead-fail .overlay {
  position: absolute;
  background-color: #212529;
  height: 100%;
  width: 100%;
  top: 0;
  left: 0;
  opacity: 0.3;
}

header.masthead h1, header.masthead-fail h1 {
  font-size: 2rem;
}

@media (min-width: 768px) {
  header.masthead, header.masthead-fail {
    padding-top: 12rem;
    padding-bottom: 12rem;
  }
  header.masthead h1, header.masthead-fail h1 {
    font-size: 3rem;
  }
}

.showcase {
  padding-top: 1rem;
  padding-bottom: 3rem;
}

.showcase .showcase-img {
  width: 70%;
  height: auto;
  align-self: flex-start;
  display:block;
  margin-left:auto;
  margin-right:auto;

}

.features-icons {
  padding-top: 1rem;
  padding-bottom: 3rem;
}

.features-icons .features-icons-item {
  max-width: 20rem;
}

.features-icons .features-icons-item .features-icons-icon {
  height: 7rem;
}

.features-icons .features-icons-item .features-icons-icon i {
  font-size: 4.5rem;
}

.features-icons .features-icons-item:hover .features-icons-icon i {
  font-size: 5rem;
}

.testimonials {
  padding-top: 5rem;
  padding-bottom: 7rem;
}

.testimonials .testimonial-item {
  max-width: 18rem;
}

.testimonials .testimonial-item img {
  max-width: 9rem;
  box-shadow: 0 5px 5px 0 #adb5bd;
}

.call-to-action {
  position: relative;
  background-color: #343a40;
  background: url("../img/bg-mouse.jpg") no-repeat center center;
  background-size: cover;
  padding-top: 7rem;
  padding-bottom: 7rem;
  text-decoration: none !important
}

.call-to-action .overlay {
  position: absolute;
  background-color: #212529;
  height: 100%;
  width: 100%;
  top: 0;
  left: 0;
  opacity: 0.3;
}

.spotify-slack {
  width: 30%;
  height: 30%;
  background-size: cover;
}
a {
  color: #ffffff;
  text-decoration: underline
}

a:hover {
  color: #343232;
}

.footer a {
  color: #f5f5f5;
  text-decoration-line: underline;
}

.sync-button-icon {
  display: inline-grid;
  width: 150px;
  height: 74px;
  padding-top: 50px;
  font-size: 2rem;
  padding-left: 8px;
  border-radius: 180px;
  color: #f5f5f5;
  background: url("../img/spotify-slack.png") no-repeat center;
  background-size: 70%;
  background-position: center 10px;
  transition: all 0.3s ease;
  max-width: 100%;
}

.sync-button {
  transition: all 450ms cubic-bezier(.4, .25, .3, 1.3);
  width: 130px;
  height: 90px;
  position: absolute;
  top: 0;
  left: 50%;
  transform: translateX(-50%);
  display: flex;
  justify-content: center;
  align-items: center;
  color: #2c2c2c ;
  background-color: rgba(0, 0, 0, 0.3);
  border: 5px solid #1db954;
  border-radius: 180px;
  cursor: pointer;
  overflow: hidden;
}

.sync-button a {
  color: #ffffff;
  transition: all 400ms cubic-bezier(.4, .25, .3, 1.3) 100ms;
  position: absolute;
  top: 50%;
  left: 50%;
  font-size: 1.5rem;
  font-weight: bold;
  font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
  line-height: 90px;
  vertical-align: middle;
  text-decoration: none;
}

.sync-button a:first-of-type {
  font-size: 4.5rem;
  transform: translate(-50%, -50%);
}

.sync-button a:last-of-type {
  transform: translate(-50%, 50%);
  font-size: 1.1rem;
  text-transform: uppercase;
  white-space: nowrap;
}

.sync-button:hover {
  width: 200px;
  border-radius: 80px;
}

.sync-button:hover a:first-of-type {
  transform: translate(-50%, -150%)
}

.sync-button:hover a:last-of-type {
  transform: translate(-50%, -50%);
  line-height: 30px;
}

.sync-button a.offset-1 {
  margin-top: -1px
}

.sync-button a.offset-3 {
  margin-top: -3px
}

.sync-button a.offset-10 {
  margin-top: -10px
}

footer.footer {
  padding-top: 0.7rem;
  padding-bottom: 0.7rem;
}

.support-form{
  padding-bottom: 5rem;
}

